contrib/libs/proj/src/proj.h


#define PROJ_VERSION_MAJOR 9
#define PROJ_VERSION_MINOR 7
#define PROJ_VERSION_PATCH 1
union PJ_COORD;
typedef union PJ_COORD PJ_COORD;
struct PJ_AREA;
typedef struct PJ_AREA PJ_AREA;
struct PJconsts;
typedef struct PJconsts PJ; 
struct PJ_INFO;
typedef struct PJ_INFO PJ_INFO;
struct PJ_PROJ_INFO;
typedef struct PJ_PROJ_INFO PJ_PROJ_INFO;
struct PJ_LIST {
    const char *id;           
    PJ *(*proj)(PJ *);        
    const char *const *descr; 
};
typedef struct PJ_LIST PJ_OPERATIONS;
struct PJ_ELLPS {
    const char *id;    
    const char *major; 
    const char *ell;   
    const char *name;  
};
typedef struct PJ_ELLPS PJ_ELLPS;
struct PJ_UNITS {
    const char *id;       
    const char *to_meter; 
    const char *name;     
    double factor;        
};
typedef struct PJ_UNITS PJ_UNITS;
struct PJ_PRIME_MERIDIANS {
    const char *id;   
    const char *defn; 
};
typedef struct PJ_PRIME_MERIDIANS PJ_PRIME_MERIDIANS;
typedef struct {
    double x, y, z, t;
} PJ_XYZT;
typedef struct {
    double u, v, w, t;
} PJ_UVWT;
typedef struct {
    double lam, phi, z, t;
} PJ_LPZT;
typedef struct {
    double o, p, k;
} PJ_OPK; 
typedef struct {
    double e, n, u;
} PJ_ENU; 
typedef struct {
    double s, a1, a2;
} PJ_GEOD; 
typedef struct {
    double u, v;
} PJ_UV;
typedef struct {
    double x, y;
} PJ_XY;
typedef struct {
    double lam, phi;
} PJ_LP;
typedef struct {
    double x, y, z;
} PJ_XYZ;
typedef struct {
    double u, v, w;
} PJ_UVW;
typedef struct {
    double lam, phi, z;
} PJ_LPZ;
union PJ_COORD {
    double v[4]; 
    PJ_XYZT xyzt;
    PJ_UVWT uvwt;
    PJ_LPZT lpzt;
    PJ_GEOD geod;
    PJ_OPK opk;
    PJ_ENU enu;
    PJ_XYZ xyz;
    PJ_UVW uvw;
    PJ_LPZ lpz;
    PJ_XY xy;
    PJ_UV uv;
    PJ_LP lp;
};
struct PJ_INFO {
    int major;              
    int minor;              
    int patch;              
    const char *release;    
    const char *version;    
    const char *searchpath; 
    const char *const *paths;
    size_t path_count;
};
struct PJ_PROJ_INFO {
    const char *id;          
    const char *description; 
    const char *definition;  
    int has_inverse; 
    double
        accuracy; 
};
typedef enum PJ_LOG_LEVEL {
    PJ_LOG_NONE = 0,
    PJ_LOG_ERROR = 1,
    PJ_LOG_DEBUG = 2,
    PJ_LOG_TRACE = 3,
    PJ_LOG_TELL = 4,
    PJ_LOG_DEBUG_MAJOR = 2, 
    PJ_LOG_DEBUG_MINOR = 3  
} PJ_LOG_LEVEL;
typedef void (*PJ_LOG_FUNCTION)(void *, int, const char *);
struct pj_ctx;
typedef struct pj_ctx PJ_CONTEXT;
PJ_CONTEXT PROJ_DLL *proj_context_create(void);
PJ_CONTEXT PROJ_DLL *proj_context_destroy(PJ_CONTEXT *ctx);
void PROJ_DLL proj_context_set_search_paths(PJ_CONTEXT *ctx, int count_paths,
                                            const char *const *paths);
void PROJ_DLL proj_context_use_proj4_init_rules(PJ_CONTEXT *ctx, int enable);
int PROJ_DLL proj_download_file(PJ_CONTEXT *ctx, const char *url_or_filename,
                                int ignore_ttl_setting,
                                int (*progress_cbk)(PJ_CONTEXT *, double pct,
                                                    void *user_data),
                                void *user_data);
PJ PROJ_DLL *proj_create(PJ_CONTEXT *ctx, const char *definition);
PJ PROJ_DLL *proj_create_crs_to_crs(PJ_CONTEXT *ctx, const char *source_crs,
                                    const char *target_crs, PJ_AREA *area);
PJ PROJ_DLL *proj_normalize_for_visualization(PJ_CONTEXT *ctx, const PJ *obj);
PJ PROJ_DLL *proj_destroy(PJ *P);
enum PJ_DIRECTION {
    PJ_FWD = 1,   
    PJ_IDENT = 0, 
    PJ_INV = -1   
};
typedef enum PJ_DIRECTION PJ_DIRECTION;
int PROJ_DLL proj_angular_input(PJ *P, enum PJ_DIRECTION dir);
int PROJ_DLL proj_angular_output(PJ *P, enum PJ_DIRECTION dir);
PJ_COORD PROJ_DLL proj_trans(PJ *P, PJ_DIRECTION direction, PJ_COORD coord);
size_t PROJ_DLL proj_trans_generic(PJ *P, PJ_DIRECTION direction, double *x,
                                   size_t sx, size_t nx, double *y, size_t sy,
                                   size_t ny, double *z, size_t sz, size_t nz,
                                   double *t, size_t st, size_t nt);
PJ_COORD PROJ_DLL proj_coord(double x, double y, double z, double t);
int PROJ_DLL proj_context_errno(PJ_CONTEXT *ctx);
int PROJ_DLL proj_errno(const PJ *P);
const char PROJ_DLL *
proj_errno_string(int err); 
void PROJ_DLL proj_log_func(PJ_CONTEXT *ctx, void *app_data,
                            PJ_LOG_FUNCTION logf);
PJ_INFO PROJ_DLL proj_info(void);
PJ_PROJ_INFO PROJ_DLL proj_pj_info(PJ *P);
const PJ_OPERATIONS PROJ_DLL *proj_list_operations(void);
const PJ_ELLPS PROJ_DLL *proj_list_ellps(void);
PROJ_DEPRECATED(const PJ_UNITS PROJ_DLL *proj_list_units(void),
                "Deprecated by proj_get_units_from_database");
PROJ_DEPRECATED(const PJ_UNITS PROJ_DLL *proj_list_angular_units(void),
                "Deprecated by proj_get_units_from_database");
const PJ_PRIME_MERIDIANS PROJ_DLL *proj_list_prime_meridians(void);
typedef enum {
    PJ_GUESSED_WKT2_2019,
    PJ_GUESSED_WKT2_2018 = PJ_GUESSED_WKT2_2019,
    PJ_GUESSED_WKT2_2015,
    PJ_GUESSED_WKT1_GDAL,
    PJ_GUESSED_WKT1_ESRI,
    PJ_GUESSED_NOT_WKT
} PJ_GUESSED_WKT_DIALECT;
typedef enum {
    PJ_TYPE_UNKNOWN,
    PJ_TYPE_ELLIPSOID,
    PJ_TYPE_PRIME_MERIDIAN,
    PJ_TYPE_GEODETIC_REFERENCE_FRAME,
    PJ_TYPE_DYNAMIC_GEODETIC_REFERENCE_FRAME,
    PJ_TYPE_VERTICAL_REFERENCE_FRAME,
    PJ_TYPE_DYNAMIC_VERTICAL_REFERENCE_FRAME,
    PJ_TYPE_DATUM_ENSEMBLE,
    PJ_TYPE_CRS,
    PJ_TYPE_GEODETIC_CRS,
    PJ_TYPE_GEOCENTRIC_CRS,
    PJ_TYPE_GEOGRAPHIC_CRS,
    PJ_TYPE_GEOGRAPHIC_2D_CRS,
    PJ_TYPE_GEOGRAPHIC_3D_CRS,
    PJ_TYPE_VERTICAL_CRS,
    PJ_TYPE_PROJECTED_CRS,
    PJ_TYPE_COMPOUND_CRS,
    PJ_TYPE_TEMPORAL_CRS,
    PJ_TYPE_ENGINEERING_CRS,
    PJ_TYPE_BOUND_CRS,
    PJ_TYPE_OTHER_CRS,
    PJ_TYPE_CONVERSION,
    PJ_TYPE_TRANSFORMATION,
    PJ_TYPE_CONCATENATED_OPERATION,
    PJ_TYPE_OTHER_COORDINATE_OPERATION,
    PJ_TYPE_TEMPORAL_DATUM,
    PJ_TYPE_ENGINEERING_DATUM,
    PJ_TYPE_PARAMETRIC_DATUM,
    PJ_TYPE_DERIVED_PROJECTED_CRS,
    PJ_TYPE_COORDINATE_METADATA,
} PJ_TYPE;
typedef enum {
    PJ_COMP_STRICT,
    PJ_COMP_EQUIVALENT,
    PJ_COMP_EQUIVALENT_EXCEPT_AXIS_ORDER_GEOGCRS,
} PJ_COMPARISON_CRITERION;
typedef enum {
    PJ_WKT2_2015,
    PJ_WKT2_2015_SIMPLIFIED,
    PJ_WKT2_2019,
    PJ_WKT2_2018 = PJ_WKT2_2019,
    PJ_WKT2_2019_SIMPLIFIED,
    PJ_WKT2_2018_SIMPLIFIED = PJ_WKT2_2019_SIMPLIFIED,
    PJ_WKT1_GDAL,
    PJ_WKT1_ESRI
} PJ_WKT_TYPE;
typedef enum {
    PJ_PROJ_5,
    PJ_PROJ_4
} PJ_PROJ_STRING_TYPE;
typedef enum {
    PJ_CS_TYPE_UNKNOWN,
    PJ_CS_TYPE_CARTESIAN,
    PJ_CS_TYPE_ELLIPSOIDAL,
    PJ_CS_TYPE_VERTICAL,
    PJ_CS_TYPE_SPHERICAL,
    PJ_CS_TYPE_ORDINAL,
    PJ_CS_TYPE_PARAMETRIC,
    PJ_CS_TYPE_DATETIMETEMPORAL,
    PJ_CS_TYPE_TEMPORALCOUNT,
    PJ_CS_TYPE_TEMPORALMEASURE
} PJ_COORDINATE_SYSTEM_TYPE;
typedef struct PJ_OBJ_LIST PJ_OBJ_LIST;
PJ_GUESSED_WKT_DIALECT PROJ_DLL proj_context_guess_wkt_dialect(PJ_CONTEXT *ctx,
                                                               const char *wkt);
PJ_TYPE PROJ_DLL proj_get_type(const PJ *obj);
int PROJ_DLL proj_is_equivalent_to(const PJ *obj, const PJ *other,
                                   PJ_COMPARISON_CRITERION criterion);
int PROJ_DLL proj_is_crs(const PJ *obj);
const char PROJ_DLL *proj_get_name(const PJ *obj);
const char PROJ_DLL *proj_get_id_auth_name(const PJ *obj, int index);
const char PROJ_DLL *proj_get_id_code(const PJ *obj, int index);
int PROJ_DLL proj_get_area_of_use(PJ_CONTEXT *ctx, const PJ *obj,
                                  double *out_west_lon_degree,
                                  double *out_south_lat_degree,
                                  double *out_east_lon_degree,
                                  double *out_north_lat_degree,
                                  const char **out_area_name);
const char PROJ_DLL *proj_as_wkt(PJ_CONTEXT *ctx, const PJ *obj,
                                 PJ_WKT_TYPE type, const char *const *options);
const char PROJ_DLL *proj_as_proj_string(PJ_CONTEXT *ctx, const PJ *obj,
                                         PJ_PROJ_STRING_TYPE type,
                                         const char *const *options);
PJ PROJ_DLL *proj_get_source_crs(PJ_CONTEXT *ctx, const PJ *obj);
PJ PROJ_DLL *proj_get_target_crs(PJ_CONTEXT *ctx, const PJ *obj);
PJ_OBJ_LIST PROJ_DLL *proj_identify(PJ_CONTEXT *ctx, const PJ *obj,
                                    const char *auth_name,
                                    const char *const *options,
                                    int **out_confidence);
void PROJ_DLL proj_int_list_destroy(int *list);
int PROJ_DLL proj_list_get_count(const PJ_OBJ_LIST *result);
PJ PROJ_DLL *proj_list_get(PJ_CONTEXT *ctx, const PJ_OBJ_LIST *result,
                           int index);
void PROJ_DLL proj_list_destroy(PJ_OBJ_LIST *result);
PJ PROJ_DLL *proj_crs_get_geodetic_crs(PJ_CONTEXT *ctx, const PJ *crs);
PJ PROJ_DLL *proj_crs_get_horizontal_datum(PJ_CONTEXT *ctx, const PJ *crs);
PJ PROJ_DLL *proj_crs_get_sub_crs(PJ_CONTEXT *ctx, const PJ *crs, int index);
PJ PROJ_DLL *proj_crs_get_datum(PJ_CONTEXT *ctx, const PJ *crs);
PJ PROJ_DLL *proj_crs_get_coordinate_system(PJ_CONTEXT *ctx, const PJ *crs);
PJ_COORDINATE_SYSTEM_TYPE PROJ_DLL proj_cs_get_type(PJ_CONTEXT *ctx,
                                                    const PJ *cs);
int PROJ_DLL proj_cs_get_axis_count(PJ_CONTEXT *ctx, const PJ *cs);
int PROJ_DLL proj_cs_get_axis_info(
    PJ_CONTEXT *ctx, const PJ *cs, int index, const char **out_name,
    const char **out_abbrev, const char **out_direction,
    double *out_unit_conv_factor, const char **out_unit_name,
    const char **out_unit_auth_name, const char **out_unit_code);
PJ PROJ_DLL *proj_get_ellipsoid(PJ_CONTEXT *ctx, const PJ *obj);
int PROJ_DLL proj_ellipsoid_get_parameters(PJ_CONTEXT *ctx, const PJ *ellipsoid,
                                           double *out_semi_major_metre,
                                           double *out_semi_minor_metre,
                                           int *out_is_semi_minor_computed,
                                           double *out_inv_flattening);
PJ PROJ_DLL *proj_get_prime_meridian(PJ_CONTEXT *ctx, const PJ *obj);
int PROJ_DLL proj_prime_meridian_get_parameters(PJ_CONTEXT *ctx,
                                                const PJ *prime_meridian,
                                                double *out_longitude,
                                                double *out_unit_conv_factor,
                                                const char **out_unit_name);
PJ PROJ_DLL *proj_crs_get_coordoperation(PJ_CONTEXT *ctx, const PJ *crs);
int PROJ_DLL proj_coordoperation_get_method_info(
    PJ_CONTEXT *ctx, const PJ *coordoperation, const char **out_method_name,
    const char **out_method_auth_name, const char **out_method_code);
int PROJ_DLL proj_coordoperation_is_instantiable(PJ_CONTEXT *ctx,
                                                 const PJ *coordoperation);
int PROJ_DLL proj_coordoperation_has_ballpark_transformation(
    PJ_CONTEXT *ctx, const PJ *coordoperation);
int PROJ_DLL proj_coordoperation_get_param_count(PJ_CONTEXT *ctx,
                                                 const PJ *coordoperation);
int PROJ_DLL proj_coordoperation_get_param_index(PJ_CONTEXT *ctx,
                                                 const PJ *coordoperation,
                                                 const char *name);
int PROJ_DLL proj_coordoperation_get_param(
    PJ_CONTEXT *ctx, const PJ *coordoperation, int index, const char **out_name,
    const char **out_auth_name, const char **out_code, double *out_value,
    const char **out_value_string, double *out_unit_conv_factor,
    const char **out_unit_name, const char **out_unit_auth_name,
    const char **out_unit_code, const char **out_unit_category);
int PROJ_DLL proj_coordoperation_get_grid_used_count(PJ_CONTEXT *ctx,
                                                     const PJ *coordoperation);